# startup-bot-builder

./: .gitignore
backend/: .env.example  Dockerfile  botbuilder.db  pyproject.toml
backend/alembic/: env.py
backend/src/: app.py
backend/src/admin/: router.py
backend/src/ai/: flow_generator.py  router.py
backend/src/analytics/: models.py  router.py
backend/src/auth/: models.py  router.py  schemas.py  service.py
backend/src/bots/: models.py  router.py  schemas.py  service.py
backend/src/core/config/: settings.py
backend/src/core/database/: base.py  models.py
backend/src/core/security/: deps.py  middleware.py
backend/src/flows/: models.py  router.py
backend/src/flows/engine/: executor.py
backend/src/flows/nodes/: ai_nodes.py  analytics_nodes.py  api_nodes.py  database.py  logic.py  messages.py  registry.py  triggers.py
backend/src/realtime/: broadcaster.py  router.py  websocket_handler.py
backend/src/telegram/: platform_handler.py  router.py
backend/src/telegram/events/: normalizer.py
backend/src/telegram/webhook/: handler.py
backend/src/templates/: router.py
docs/architecture/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/builder/nodes/: CustomNode.tsx  nodeTypeMeta.ts
frontend/src/components/builder/panels/: ExecutionDebugger.tsx  NodeConfigPanel.tsx  NodeSidebar.tsx
frontend/src/components/builder/toolbar/: BuilderToolbar.tsx
frontend/src/hooks/: useAutosave.ts  useBuilderShortcuts.ts  useFlowLoader.ts  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts  flows.ts
frontend/src/pages/auth/: TelegramAuth.tsx
frontend/src/pages/builder/: FlowBuilder.tsx
frontend/src/pages/dashboard/: Dashboard.tsx
frontend/src/stores/: authStore.ts  builderStore.ts
infra/: docker-compose.yml
