[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botbuilder-backend"
version = "1.0.0"
description = "World-class Telegram Bot Builder Platform - Backend"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "litestar[standard]>=2.12.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",

    # Telegram
    "aiogram>=3.13.0",
    "aiohttp>=3.10.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.1.0",

    # Redis & Queue
    "redis[hiredis]>=5.1.0",
    "rq>=1.16.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=43.0.0",

    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # AI
    "openai>=1.54.0",
    "tiktoken>=0.8.0",
    "anthropic>=0.37.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Logging & Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[litestar]>=2.18.0",

    # HTTP Client
    "httpx>=0.27.0",

    # Utilities
    "python-multipart>=0.0.12",
    "orjson>=3.10.0",
    "msgpack>=1.1.0",
    "anyio>=4.6.0",
    "tenacity>=9.0.0",
    "arrow>=1.3.0",
    "nanoid>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "W", "F", "I", "N", "UP", "ANN", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
